--- a/TTools/TTools/App.xaml
+++ b/TTools/TTools/App.xaml
@@ -11,6 +11,10 @@
                 <ResourceDictionary>
                     <vm:ViewModelLocator x:Key="Locator"></vm:ViewModelLocator>
                 </ResourceDictionary>
+                <ResourceDictionary Source="/Styles/Converters.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Themes/DefaultColor.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Styles/TextBlock.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Styles/Button.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
