--- a/TTools/TTools/Views/JsonView.xaml
+++ b/TTools/TTools/Views/JsonView.xaml
@@ -5,8 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TTools.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding Json,Source={StaticResource Locator}}">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBox Margin="5" TextWrapping="Wrap" Text="{Binding SourceText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Margin="5" TextWrapping="Wrap" Grid.Column="1" Text="{Binding TargetText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
     </Grid>
 </UserControl>
