--- a/TTools/TTools/Views/JsonView.xaml
+++ b/TTools/TTools/Views/JsonView.xaml
@@ -7,18 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding Json,Source={StaticResource Locator}}">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBox Margin="5" TextWrapping="Wrap" Text="{Binding SourceText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
-        <TextBox Margin="5" TextWrapping="Wrap" Grid.Column="1" Text="{Binding TargetText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
-        <WrapPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="5">
-            <Button Style="{StaticResource CommonButtonStyle}" Content="格式化" Height="30" Width="100"></Button>
+        <TextBox Margin="5" TextWrapping="WrapWithOverflow" AcceptsReturn="True" Text="{Binding SourceText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox BorderThickness="0" Grid.Row="1" Margin="5" Text="{Binding ErrorText,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" TextWrapping="WrapWithOverflow" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
+        <!--<TextBox Margin="5" TextWrapping="Wrap" Grid.Column="1" Text="{Binding TargetText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>-->
+        <WrapPanel Grid.Row="2" Grid.ColumnSpan="2" Margin="5">
+            <Button Style="{StaticResource CommonButtonStyle}" Command="{Binding CheckCommand}" Content="校验格式" Height="30" MinWidth="100"></Button>
+            <Button Style="{StaticResource CommonButtonStyle}" Margin="2.5,0,2.5,0" Command="{Binding FormatCommand}" Content="格式化" Height="30" MinWidth="100"></Button>
+            <Button Style="{StaticResource CommonButtonStyle}" Margin="2.5,0,2.5,0" Command="{Binding UnFormatCommand}" Content="压缩格式" Height="30" MinWidth="100"></Button>
+            <Button Style="{StaticResource CommonButtonStyle}" Margin="2.5,0,2.5,0" Command="{Binding UnicodeToSampleChineseCommand}" Content="Unicode转中文" Height="30" MinWidth="100"></Button>
+            <Button Style="{StaticResource CommonButtonStyle}" Margin="2.5,0,2.5,0" Command="{Binding SampleChineseToUnicodeCommand}" Content="中文转义" Height="30" MinWidth="100"></Button>
         </WrapPanel>
     </Grid>
 </UserControl>
