--- a/TTools/TTools/MainWindow.xaml
+++ b/TTools/TTools/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="TTools" AllowsTransparency="True" Background="Transparent" WindowStartupLocation="CenterScreen" WindowStyle="None" Height="650" Width="1080"  WindowState="Normal"  DataContext="{Binding MainView,Source={StaticResource Locator}}" >
     <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="30"
+        <WindowChrome CaptionHeight="35"
                     GlassFrameThickness="0"
                     NonClientFrameEdges="None"
                     CornerRadius="0"
@@ -42,17 +42,25 @@
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </Window.Resources>
-    <Border  BorderThickness="0.8" Background="{DynamicResource MainWorkAreaBackgroud}" CornerRadius="10" BorderBrush="{DynamicResource MainWindowBorderBrush}">
+    <Border  BorderThickness="0.8" Background="{DynamicResource leftControlBackground}" CornerRadius="3" BorderBrush="{DynamicResource MainWindowBorderBrush}">
         <Grid >
             <Grid.RowDefinitions>
-                <RowDefinition Height="45"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Border Background="{DynamicResource mainWindowTitleBorderBrush}" CornerRadius="10,10,0,0">
-                <Grid WindowChrome.IsHitTestVisibleInChrome="True" Margin="0,6,0,6">
-
-                    <StackPanel WindowChrome.IsHitTestVisibleInChrome="True"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,10,0">
+            <Border Background="{DynamicResource transparent}" CornerRadius="10,10,0,0">
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Border Grid.Column="1" Background="{DynamicResource workAreaBackground}" ></Border>
+                    <!--<StackPanel>
+                        <TextBlock Text="{Binding TimeTips,StringFormat='yyyy/MM/dd '}" Margin="10,0,0,0"></TextBlock>
+                        <TextBlock Text="{Binding TimeTips,StringFormat='HH:mm:ss '}" Margin="10,0,0,0"></TextBlock>
+                    </StackPanel>-->
+                    <StackPanel Grid.Column="1" WindowChrome.IsHitTestVisibleInChrome="True"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,6,10,6">
                         <Button Style="{StaticResource IconButtonStyle}" FontSize="16" Margin="10,0,10,0"  Command="{Binding BackCommand}"  Foreground="{DynamicResource mainOperateButtonBrushes}"  Visibility="{Binding Content,ElementName=workArea,Converter={StaticResource NullToVisibilityConverter}}" Content="&#xe697;"></Button>
                         <Button Style="{StaticResource IconButtonStyle}" FontSize="16" Margin="10,0,10,0" Visibility="Collapsed" Command="{x:Static SystemCommands.MinimizeWindowCommand}"  Foreground="{DynamicResource mainOperateButtonBrushes}" Content="&#xea6a;"></Button>
                         <Button Style="{StaticResource IconButtonStyle}" FontSize="16" Margin="10,0,10,0"  Command="{x:Static SystemCommands.MaximizeWindowCommand}"  x:Name="max" Foreground="{DynamicResource mainOperateButtonBrushes}" Content="&#xe65d;"></Button>
@@ -63,15 +71,22 @@
             </Border>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="130"></ColumnDefinition>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Vertical">
-                    <controls:NavigateButton Icon="&#xe6a0;" d:Content="系统相关" IsChecked="True" Command="{Binding MenuCommand}" CommandParameter="{Binding Path=Navigate,RelativeSource={RelativeSource Mode=Self}}"  Style="{StaticResource NavigateButtonStyle}" Margin="5" Height="35" Content="{DynamicResource SystemContent}" ToolTips="System" >
+                    <StackPanel Orientation="Horizontal" Visibility="Hidden" HorizontalAlignment="Left" Margin="20,0,0,5">
+                        <Ellipse Fill="Red" Width="35" Height="35"></Ellipse>
+                        <TextBlock Text="用户名" VerticalAlignment="Center" FontSize="16" Margin="15,0,0,0"></TextBlock>
+                    </StackPanel>
+                    <controls:NavigateButton Icon="&#xe83a;" d:Content="主页" IsChecked="True" Command="{Binding MenuCommand}" CommandParameter="{Binding Path=Navigate,RelativeSource={RelativeSource Mode=Self}}"  Style="{StaticResource NavigateButtonStyle}" Margin="5" Height="45" Content="{DynamicResource SystemMainHomeContent}" ToolTips="System" >
+
+                    </controls:NavigateButton>
+                    <controls:NavigateButton Icon="&#xe6a0;" d:Content="系统相关"  Command="{Binding MenuCommand}" CommandParameter="{Binding Path=Navigate,RelativeSource={RelativeSource Mode=Self}}" IconFontSize="20" Style="{StaticResource NavigateButtonStyle}" Margin="5" Height="45" Content="{DynamicResource SystemContent}" ToolTips="System" >
 
                     </controls:NavigateButton>
 
-                    <controls:NavigateButton Icon="&#xe604;" d:Content="文本操作"  Command="{Binding MenuCommand}" CommandParameter="{Binding Path=Navigate,RelativeSource={RelativeSource Mode=Self}}"   Style="{StaticResource NavigateButtonStyle}" Margin="5" Height="35" Content="{DynamicResource TxtContent}" ToolTips="Txt" >
+                    <controls:NavigateButton Icon="&#xe604;" d:Content="文本操作"  Command="{Binding MenuCommand}" CommandParameter="{Binding Path=Navigate,RelativeSource={RelativeSource Mode=Self}}"   Style="{StaticResource NavigateButtonStyle}" Margin="5" Height="45" Content="{DynamicResource TxtContent}" ToolTips="Txt" >
 
                     </controls:NavigateButton>
                 </StackPanel>
@@ -82,8 +97,8 @@
                             <RowDefinition Height="auto"></RowDefinition>
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
-                        <TextBlock Text="{Binding CurrentTitle}" FontSize="18" FontWeight="Heavy" VerticalAlignment="Center" Margin="10,15,0,0"></TextBlock>
-                        <Border Grid.Row="1" Background="{DynamicResource MainWorkAreaBackgroud}"  Height="38"  Margin="10,10,10,0"  CornerRadius="3">
+                        <TextBlock Text="{Binding CurrentTitle}" Visibility="Collapsed" FontSize="18" FontWeight="Heavy" VerticalAlignment="Center" Margin="10,15,0,0"></TextBlock>
+                        <Border Grid.Row="1" Visibility="Collapsed" Background="{DynamicResource MainWorkAreaBackgroud}"  Height="38"  Margin="10,10,10,0"  CornerRadius="3">
                             <ItemsControl Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" ItemsSource="{Binding ToolList}"  Margin="10,0,10,0" >
                                 <ItemsControl.Template>
                                     <ControlTemplate>
@@ -107,10 +122,10 @@
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
                         </Border>
-                        <Border Grid.Row="2" Background="{DynamicResource MainWorkAreaBackgroud}" Margin="10,1,10,10">
+                        <Border Grid.Row="2">
                             <ContentControl   x:Name="workArea" Grid.Row="2"  Content="{Binding WorkView}"></ContentControl>
                         </Border>
-                       
+
 
                     </Grid>
                 </Border>
