--- a/TTools/TTools/Themes/Zh_CN.xaml
+++ b/TTools/TTools/Themes/Zh_CN.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <system:String x:Key="SystemMainHomeContent">主页</system:String>
     <system:String x:Key="SystemContent">系统信息</system:String>
     <system:String x:Key="TxtContent">文本操作</system:String>
+   
 </ResourceDictionary>
